implemented circle example

--- a/src/examples/circle/circle.html
+++ b/src/examples/circle/circle.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title></title>
+        <meta charset="utf-8">
     </head>
-    <script src="../../dist/bundle.js"></script>
     <body>
-
+        <div id="svgkit-app" data-app="circle"></div>
+        <script src="../../../dist/bundle.js"></script>
     </body>
 </html>
